--- a/server/index.html
+++ b/server/index.html
@@ -1,6 +1,6 @@
 <html>  
   <head>  
-    <title>File upload in Node.js by Javatpoint</title>  
+    <title>Upload Abschlussarbeit</title>  
  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>  
   <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery.form/3.51/jquery.form.min.js"></script>  
   <script>  
@@ -26,10 +26,10 @@
   </script>  
   </head>  
   <body>  
-      <h1>Express.js File Upload: by Javatpoint</h1>  
+      <h1>Hier können sie ihre Abschlussarbeit hochladen.</h1>  
       <form id="uploadForm" enctype="multipart/form-data" action="/uploadjavatpoint" method="post">  
-       <input type="file" name="myfile" /><br/><br/>  
-       <input type="submit" value="Upload Image" name="submit"><br/><br/>  
+       <input type="file" name="myfile"  /><br/><br/>  
+       <input type="submit" value="Upload Abschlussarbeit" name="submit"><br/><br/>  
        <span id="status"></span>  
       </form>  
   </body>  
