--- a/client/src/index.html
+++ b/client/src/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+      <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./css/style.css">
@@ -9,49 +10,6 @@
     <title>Abschlussarbeitsverwaltung</title>
 </head>
 <body>
-
-    <header>
-        <div id="topbar">
-            <a id="download" href="#">Download</a>
-        </div>
-        <div id="container1">
-            <div id="profilbild"></div>
-            <div id="titel">Titel der Abschlussarbeit</div>
-            <div id="name">Student xyz</div>
-            <div id="timer"></div>
-        </div>
-    </header>
-
-    <div id="navbar">
-        <div id="box1">
-            <div id="link1">
-                <i class="fas fa-search"></i>
-            </div>
-           <div id="link2">
-               <i class="fas fa-plus-circle"></i>
-            </div>
-            <div id="link3">
-                <i class="fas fa-edit"></i>
-            </div>
-            <div id="link4">
-                <i class="fas fa-user"></i>
-            </div>
-            <div id="link5">
-                <i class="fas fa-sign-out-alt"></i>
-            </div>
-        </div>
-    </div>
-
-    <main>
-
-        <section id="container2">
-            <div id="beschreibung">Beschreibung</div>
-            <div id="gliederung">Gliederung</div>
-            <div id="autor">Autor</div>
-            <div id="betreuer">Betreuer</div>
-        </section>
-
-    </main>
-
+    <app-root></app-root>
 </body>
 </html>
